fix button alignemnt

--- a/style2.css
+++ b/style2.css
@@ -698,3 +698,7 @@ label {
     font-weight: bold;
     color: #333;
 }
+
+#module-submit{
+    align-self: flex-start;
+}
